# victron-modbus-tcp-viewer

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  webpack.config.js
src/: app.riot  index.html  index.js  pages.js  service.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  state.rs
src-tauri/src/util/: config.rs  mod.rs  modbus.rs  victron.rs
src/components/global/: icon.riot  micro-modal.riot
src/pages/: connection-error.riot  not-found.riot  settings.riot  viewer.riot
