[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Raphael Ludwig"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.2", features = ["dialog-open"] }
tokio-modbus = { version = "^0.5.3", default-features = false, features = ["tcp"] }
clap = { version = "^4.0.32", features = ["derive"] }
csv = "^1.1.6"
log = "^0.4.17"
pretty_env_logger = "^0.4.0"
toml = "0.5.10"
async-trait = "0.1.61"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
