[package]
name = "app"
version = "0.1.1"
description = "A App to view Modbus variables of a Victron system"
authors = ["Raphael Ludwig"]
license = "MIT"
repository = "https://github.com/Raffy23/victron-modbus-tcp-viewer"
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = ["dialog-open"] }
tokio-modbus = { version = "0.9.0", default-features = false, features = ["tcp"] }
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
toml = "0.8.2"
async-trait = "0.1.61"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
